// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`initLayout and initGraphs > increases sibling spacing when a child has a description 1`] = `
[
  {
    "data": {
      "title": "Root",
    },
    "id": "root",
    "position": {
      "x": 0,
      "y": 0,
    },
    "type": "root",
  },
  {
    "data": {
      "description": "Two lines of description",
      "title": "right-a",
    },
    "id": "right-a",
    "position": {
      "x": 600,
      "y": -63,
    },
    "type": "right",
  },
  {
    "data": {
      "title": "right-b",
    },
    "id": "right-b",
    "position": {
      "x": 600,
      "y": 63,
    },
    "type": "right",
  },
]
`;

exports[`initLayout and initGraphs > keeps bilateral branches on opposite sides of the root 1`] = `
[
  {
    "data": {
      "title": "Root",
    },
    "id": "root",
    "position": {
      "x": 0,
      "y": 0,
    },
    "type": "root",
  },
  {
    "data": {
      "title": "left-a",
    },
    "id": "left-a",
    "position": {
      "x": -600,
      "y": -51,
    },
    "type": "left",
  },
  {
    "data": {
      "title": "left-b",
    },
    "id": "left-b",
    "position": {
      "x": -600,
      "y": 51,
    },
    "type": "left",
  },
  {
    "data": {
      "title": "left-a-child",
    },
    "id": "left-a-child",
    "position": {
      "x": -1200,
      "y": -51,
    },
    "type": "left",
  },
  {
    "data": {
      "title": "right-a",
    },
    "id": "right-a",
    "position": {
      "x": 600,
      "y": -51,
    },
    "type": "right",
  },
  {
    "data": {
      "title": "right-b",
    },
    "id": "right-b",
    "position": {
      "x": 600,
      "y": 51,
    },
    "type": "right",
  },
  {
    "data": {
      "title": "right-a-child",
    },
    "id": "right-a-child",
    "position": {
      "x": 1200,
      "y": -51,
    },
    "type": "right",
  },
]
`;

exports[`initLayout and initGraphs > lays out a root with two right children 1`] = `
[
  {
    "data": {
      "title": "Root",
    },
    "id": "root",
    "position": {
      "x": 0,
      "y": 0,
    },
    "type": "root",
  },
  {
    "data": {
      "title": "right-a",
    },
    "id": "right-a",
    "position": {
      "x": 600,
      "y": -51,
    },
    "type": "right",
  },
  {
    "data": {
      "title": "right-b",
    },
    "id": "right-b",
    "position": {
      "x": 600,
      "y": 51,
    },
    "type": "right",
  },
]
`;

exports[`initLayout and initGraphs > positions a root-only graph at the origin 1`] = `
[
  {
    "data": {
      "title": "Root",
    },
    "id": "root",
    "position": {
      "x": 0,
      "y": 0,
    },
    "type": "root",
  },
]
`;
